--- a/index.html
+++ b/index.html
@@ -25,5 +25,14 @@
             </ul>
         </nav>
     </header>
+
+    <!--Home-->
+    <section class="intro" id="home">
+        <h1 class="section-title section__title--intro">
+            Hi, I am <strong>Daniel Puente</strong>
+        </h1>
+        <p class="section__subtitle section__subtitle--intro">Front-end dev</p>
+        <img src="/img/dev-jane-01.jpg" alt="">
+    </section>
 </body>
 </html>
