--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </button>
         <nav class="nav">
             <ul class="nav__list">
-                <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">My Services</a></li>
+                <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">About me</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">My work</a></li>
             </ul>
@@ -33,6 +33,30 @@
         </h1>
         <p class="section__subtitle section__subtitle--intro">Front-end dev</p>
         <img src="/img/dev-jane-01.jpg" alt="">
+    </section>
+
+    <!--My services-->
+
+    <section class="my-services" id="services">
+        <h2 class="section__title section__title--services">What I do</h2>
+        <div class="services">
+            <div class="service">
+                <h3></h3>
+                <p></p>
+            </div> <!-- / service-->
+
+            <div class="service">
+                <h3></h3>
+                <p></p>
+            </div> <!-- / service-->
+
+            <div class="service">
+                <h3></h3>
+                <p></p>
+            </div> <!-- / service-->
+        </div><!--services-->
+
+        <a href="#work" class="btn">My work</a>
     </section>
 </body>
 </html>
