--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <ul class="nav__list">
                 <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">About me</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">My work</a></li>
+                <li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
+                <li class="nav__item"><a href="#work" class="nav__link">My work</a></li>
             </ul>
         </nav>
     </header>
@@ -41,22 +41,79 @@
         <h2 class="section__title section__title--services">What I do</h2>
         <div class="services">
             <div class="service">
-                <h3></h3>
-                <p></p>
+                <h3>Desing + Development</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum similique magni est tempore odit aut consequatur placeat consectetur assumenda commodi, dignissimos maiores quia in quibusdam consequuntur aperiam laborum dicta quisquam.</p>
             </div> <!-- / service-->
 
             <div class="service">
-                <h3></h3>
-                <p></p>
+                <h3>E-comerce</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quibusdam sunt quisquam, tenetur fugiat iure labore impedit maiores numquam consectetur sequi ullam magnam quae fuga. At voluptates numquam laborum perferendis.</p>
             </div> <!-- / service-->
 
             <div class="service">
-                <h3></h3>
-                <p></p>
+                <h3>WordPress</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas provident possimus dolorum iusto repellat deserunt similique in eius excepturi voluptatibus odio voluptate eum hic autem, asperiores id architecto praesentium quae.</p>
             </div> <!-- / service-->
         </div><!--services-->
 
         <a href="#work" class="btn">My work</a>
     </section>
+
+    <!--about me-->
+
+    <section class="about-me" id="about">
+        <h2 class="section__title section__title--about">Who I am</h2>
+        <p class="section__subtitle section__subtitle--about">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga accusantium ipsum in quam eligendi veritatis voluptate consequatur iure corrupti esse, quis voluptatibus sint aperiam eum a minus saepe doloribus? Atque!</p>
+
+        <div class="about-me--body">
+            <p></p>
+            <p></p>
+        </div>
+
+        <img src="img/dev-jane-02.jpg" alt="">
+    </section>
+
+    <!--My work-->
+
+    <section class="my__work" id="work">
+        <h2 class="section__title">My work</h2>
+        <p class="section__subtitle"></p>
+
+        <div class="portfolio">
+            <!--Portfolio Intem-->
+            <a href="#" class="portfolio__item">
+                <img src="/img/portfolio-01.jpg" alt="" class="portfolio__img">
+            </a> 
+
+            <!--Portfolio Intem-->
+            <a href="#" class="portfolio__item">
+                <img src="/img/portfolio-02.jpg" alt="" class="portfolio__img">
+            </a> 
+
+            <!--Portfolio Intem-->
+            <a href="#" class="portfolio__item">
+                <img src="/img/portfolio-03.jpg" alt="" class="portfolio__img">
+            </a> 
+
+            <!--Portfolio Intem-->
+            <a href="#" class="portfolio__item">
+                <img src="/img/portfolio-04.jpg" alt="" class="portfolio__img">
+            </a> 
+
+        </div>
+    </section>
+
+    <!--Footer-->
+
+    <footer>
+        <!--Replace with your email address-->
+        <a href="#" class="footer__link">dev@gmail.com</a>
+        <ul class="social-list">
+            <li class="social-list__item"><a href="" class="social-list__link">a</a></li>
+            <li class="social-list__item"><a href="" class="social-list__link">b</a></li>
+            <li class="social-list__item"><a href="" class="social-list__link">c</a></li>
+            <li class="social-list__item"><a href="" class="social-list__link">d</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
