--- a/index.html
+++ b/index.html
@@ -1,119 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DevDaniel</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
-</head>
-<body>
-    <header>
-        <div class="logo">
-            <img src="/img/devjane.png" alt="">
-        </div>
-        <button class="nav-toggle" aria-label="toggle navigation">
-            <span class="hamburger"></span>
-        </button>
-        <nav class="nav">
-            <ul class="nav__list">
-                <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
-                <li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
-                <li class="nav__item"><a href="#work" class="nav__link">My work</a></li>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>DevDaniel</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
+        
+        <!--CSS-->
+        <link rel="stylesheet" href="/build/css/app.css">
+
+        <!--Fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap" rel="stylesheet">
+
+    </head>
+    <body>
+        <header>
+            <div class="logo">
+                <img src="/img/devjane.png" alt="">
+            </div>
+            <button class="nav-toggle" aria-label="toggle navigation">
+                <span class="hamburger"></span>
+            </button>
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+                    <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
+                    <li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
+                    <li class="nav__item"><a href="#work" class="nav__link">My work</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <!--Home-->
+        <section class="intro" id="home">
+            <h1 class="section-title section__title--intro">
+                Hi, I am <strong>Daniel Puente</strong>
+            </h1>
+            <p class="section__subtitle section__subtitle--intro">Front-end dev</p>
+            <img src="/img/dev-jane-01.jpg" alt="">
+        </section>
+
+        <!--My services-->
+
+        <section class="my-services" id="services">
+            <h2 class="section__title section__title--services">What I do</h2>
+            <div class="services">
+                <div class="service">
+                    <h3>Desing + Development</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum similique magni est tempore odit aut consequatur placeat consectetur assumenda commodi, dignissimos maiores quia in quibusdam consequuntur aperiam laborum dicta quisquam.</p>
+                </div> <!-- / service-->
+
+                <div class="service">
+                    <h3>E-comerce</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quibusdam sunt quisquam, tenetur fugiat iure labore impedit maiores numquam consectetur sequi ullam magnam quae fuga. At voluptates numquam laborum perferendis.</p>
+                </div> <!-- / service-->
+
+                <div class="service">
+                    <h3>WordPress</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas provident possimus dolorum iusto repellat deserunt similique in eius excepturi voluptatibus odio voluptate eum hic autem, asperiores id architecto praesentium quae.</p>
+                </div> <!-- / service-->
+            </div><!--services-->
+
+            <a href="#work" class="btn">My work</a>
+        </section>
+
+        <!--about me-->
+
+        <section class="about-me" id="about">
+            <h2 class="section__title section__title--about">Who I am</h2>
+            <p class="section__subtitle section__subtitle--about">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga accusantium ipsum in quam eligendi veritatis voluptate consequatur iure corrupti esse, quis voluptatibus sint aperiam eum a minus saepe doloribus? Atque!</p>
+
+            <div class="about-me--body">
+                <p></p>
+                <p></p>
+            </div>
+
+            <img src="img/dev-jane-02.jpg" alt="">
+        </section>
+
+        <!--My work-->
+
+        <section class="my__work" id="work">
+            <h2 class="section__title">My work</h2>
+            <p class="section__subtitle"></p>
+
+            <div class="portfolio">
+                <!--Portfolio Intem-->
+                <a href="#" class="portfolio__item">
+                    <img src="/img/portfolio-01.jpg" alt="" class="portfolio__img">
+                </a> 
+
+                <!--Portfolio Intem-->
+                <a href="#" class="portfolio__item">
+                    <img src="/img/portfolio-02.jpg" alt="" class="portfolio__img">
+                </a> 
+
+                <!--Portfolio Intem-->
+                <a href="#" class="portfolio__item">
+                    <img src="/img/portfolio-03.jpg" alt="" class="portfolio__img">
+                </a> 
+
+                <!--Portfolio Intem-->
+                <a href="#" class="portfolio__item">
+                    <img src="/img/portfolio-04.jpg" alt="" class="portfolio__img">
+                </a> 
+
+            </div>
+        </section>
+
+        <!--Footer-->
+
+        <footer>
+            <!--Replace with your email address-->
+            <a href="#" class="footer__link">dev@gmail.com</a>
+            <ul class="social-list">
+                <li class="social-list__item"><a href="" class="social-list__link">a</a></li>
+                <li class="social-list__item"><a href="" class="social-list__link">b</a></li>
+                <li class="social-list__item"><a href="" class="social-list__link">c</a></li>
+                <li class="social-list__item"><a href="" class="social-list__link">d</a></li>
             </ul>
-        </nav>
-    </header>
-
-    <!--Home-->
-    <section class="intro" id="home">
-        <h1 class="section-title section__title--intro">
-            Hi, I am <strong>Daniel Puente</strong>
-        </h1>
-        <p class="section__subtitle section__subtitle--intro">Front-end dev</p>
-        <img src="/img/dev-jane-01.jpg" alt="">
-    </section>
-
-    <!--My services-->
-
-    <section class="my-services" id="services">
-        <h2 class="section__title section__title--services">What I do</h2>
-        <div class="services">
-            <div class="service">
-                <h3>Desing + Development</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum similique magni est tempore odit aut consequatur placeat consectetur assumenda commodi, dignissimos maiores quia in quibusdam consequuntur aperiam laborum dicta quisquam.</p>
-            </div> <!-- / service-->
-
-            <div class="service">
-                <h3>E-comerce</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quibusdam sunt quisquam, tenetur fugiat iure labore impedit maiores numquam consectetur sequi ullam magnam quae fuga. At voluptates numquam laborum perferendis.</p>
-            </div> <!-- / service-->
-
-            <div class="service">
-                <h3>WordPress</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas provident possimus dolorum iusto repellat deserunt similique in eius excepturi voluptatibus odio voluptate eum hic autem, asperiores id architecto praesentium quae.</p>
-            </div> <!-- / service-->
-        </div><!--services-->
-
-        <a href="#work" class="btn">My work</a>
-    </section>
-
-    <!--about me-->
-
-    <section class="about-me" id="about">
-        <h2 class="section__title section__title--about">Who I am</h2>
-        <p class="section__subtitle section__subtitle--about">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga accusantium ipsum in quam eligendi veritatis voluptate consequatur iure corrupti esse, quis voluptatibus sint aperiam eum a minus saepe doloribus? Atque!</p>
-
-        <div class="about-me--body">
-            <p></p>
-            <p></p>
-        </div>
-
-        <img src="img/dev-jane-02.jpg" alt="">
-    </section>
-
-    <!--My work-->
-
-    <section class="my__work" id="work">
-        <h2 class="section__title">My work</h2>
-        <p class="section__subtitle"></p>
-
-        <div class="portfolio">
-            <!--Portfolio Intem-->
-            <a href="#" class="portfolio__item">
-                <img src="/img/portfolio-01.jpg" alt="" class="portfolio__img">
-            </a> 
-
-            <!--Portfolio Intem-->
-            <a href="#" class="portfolio__item">
-                <img src="/img/portfolio-02.jpg" alt="" class="portfolio__img">
-            </a> 
-
-            <!--Portfolio Intem-->
-            <a href="#" class="portfolio__item">
-                <img src="/img/portfolio-03.jpg" alt="" class="portfolio__img">
-            </a> 
-
-            <!--Portfolio Intem-->
-            <a href="#" class="portfolio__item">
-                <img src="/img/portfolio-04.jpg" alt="" class="portfolio__img">
-            </a> 
-
-        </div>
-    </section>
-
-    <!--Footer-->
-
-    <footer>
-        <!--Replace with your email address-->
-        <a href="#" class="footer__link">dev@gmail.com</a>
-        <ul class="social-list">
-            <li class="social-list__item"><a href="" class="social-list__link">a</a></li>
-            <li class="social-list__item"><a href="" class="social-list__link">b</a></li>
-            <li class="social-list__item"><a href="" class="social-list__link">c</a></li>
-            <li class="social-list__item"><a href="" class="social-list__link">d</a></li>
-        </ul>
-    </footer>
-</body>
+        </footer>
+    </body>
 </html>
