--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>DevDaniel</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
-        
+
         <!--CSS-->
         <link rel="stylesheet" href="/build/css/app.css">
 
@@ -39,7 +39,7 @@
                 Hi, I am <strong>Daniel Puente</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">Front-end dev</p>
-            <img src="/img/dev-jane-01.jpg" alt="">
+            <img src="/img/dev-jane-01.jpg" alt="" class="intro__img">
         </section>
 
         <!--My services-->
