--- a/index.html
+++ b/index.html
@@ -70,14 +70,13 @@
 
         <section class="about-me" id="about">
             <h2 class="section__title section__title--about">Who I am</h2>
-            <p class="section__subtitle section__subtitle--about">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga accusantium ipsum in quam eligendi veritatis voluptate consequatur iure corrupti esse, quis voluptatibus sint aperiam eum a minus saepe doloribus? Atque!</p>
-
+            <p class="section__subtitle section__subtitle--about">Designer & developer based out of NYC
             <div class="about-me--body">
-                <p></p>
-                <p></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
 
-            <img src="img/dev-jane-02.jpg" alt="">
+            <img src="img/dev-jane-02.jpg" alt="" class="about-me__img">
         </section>
 
         <!--My work-->
