--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 
         <!--My work-->
 
-        <section class="my__work" id="work">
+        <section class="my-work" id="work">
             <h2 class="section__title">My work</h2>
-            <p class="section__subtitle"></p>
+            <p class="section__subtitle section__subtitle--work ">A selection of my range of work</p>
 
             <div class="portfolio">
                 <!--Portfolio Intem-->
@@ -111,14 +111,30 @@
 
         <!--Footer-->
 
-        <footer>
+        <footer class="footer">
             <!--Replace with your email address-->
             <a href="#" class="footer__link">dev@gmail.com</a>
             <ul class="social-list">
-                <li class="social-list__item"><a href="" class="social-list__link">a</a></li>
-                <li class="social-list__item"><a href="" class="social-list__link">b</a></li>
-                <li class="social-list__item"><a href="" class="social-list__link">c</a></li>
-                <li class="social-list__item"><a href="" class="social-list__link">d</a></li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://codepen.io">
+                        <i class="fab fa-codepen"></i>
+                    </a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="http://dribbble.com">
+                        <i class="fab fa-dribbble"></i>
+                    </a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://twitter.com">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </li>
+                <li class="social-list__item">
+                    <a class="social-list__link" href="https://github.com">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </li>
             </ul>
         </footer>
     </body>
