--- a/index.html
+++ b/index.html
@@ -137,5 +137,7 @@
                 </li>
             </ul>
         </footer>
+
+        <script src="js/index.js"></script>
     </body>
 </html>
